# PM_Assessment_Synthetic_Event_Logs

./: .gitignore  문제B_가이드라인_합성로그_평가.docx
01_Ref/: PM 연구 공부.hwp
02_Data_EDA/: data_eda.ipynb  train_data_eda.ipynb
03_Data_Split/: data_split_csv.ipynb  data_split_xes.ipynb
04_ProcessGAN/04_01_Encoding/: processGAN_Encoding.ipynb
04_ProcessGAN/04_01_Encoding/results/: activity2id.json  id2activity.json  processgan_encoding_summary.csv  test_MIMICEL_time_duration_norm.txt  time_normalization_meta.json
04_ProcessGAN/04_02_ProcessGAN-main/: run.py
04_ProcessGAN/04_02_ProcessGAN-main/configurations/: MIMICEL_trans_attn.yaml
04_ProcessGAN/04_02_ProcessGAN-main/data/data_info/MIMICEL/: act_dict.csv  act_freq_dict.csv  length_dict.csv
04_ProcessGAN/04_02_ProcessGAN-main/data/data_time/MIMICEL/data_seq/: MIMICEL.txt  MIMICEL_time_dif_norm.txt  MIMICEL_time_duration_norm.txt  test_MIMICEL.txt  val_MIMICEL_time_duration_norm.txt
04_ProcessGAN/04_02_ProcessGAN-main/eval/: time_eval.py
04_ProcessGAN/04_02_ProcessGAN-main/result/MIMICEL/5101538/: 100_d_model.pth  100_g_model.pth  100_result_trans.txt  100_result_trans_time.txt  parameter_log.txt
04_ProcessGAN/04_02_ProcessGAN-main/result/MIMICEL/510160/: 100_d_model.pth  100_g_model.pth  100_result_trans.txt  100_result_trans_time.txt  parameter_log.txt
04_ProcessGAN/04_02_ProcessGAN-main/result/MIMICEL/5101616/: 100_d_model.pth  100_g_model.pth  100_result_trans.txt  100_result_trans_time.txt
04_ProcessGAN/04_02_ProcessGAN-main/result/MIMICEL/5101628/: 100_d_model.pth  100_g_model.pth  100_result_trans.txt
04_ProcessGAN/04_03_result/5101628/: 100_result_trans_time.txt
05_PALSYN/05_01_Encoding/: Encoding.ipynb
05_PALSYN/05_01_Encoding/results/: val_MIMICEL.txt
05_PALSYN/05_02_PALSYN/: .gitignore  README.md  pyproject.toml  setup.py
05_PALSYN/05_02_PALSYN/PALSYN/: __init__.py  metrics_logger.py  optimizers.py  synthesizer.py
05_PALSYN/05_02_PALSYN/PALSYN/models/: __init__.py  base.py  esn.py  gru.py  lnn.py  lstm.py  rnn.py  tcn.py  transformer.py
05_PALSYN/05_02_PALSYN/PALSYN/postprocessing/: log_postprocessing.py
05_PALSYN/05_02_PALSYN/PALSYN/preprocessing/: data_preparation_pipeline.py  log_preprocessing.py  log_tokenization.py
05_PALSYN/05_02_PALSYN/PALSYN/sampling/: log_sampling.py
05_PALSYN/05_02_PALSYN/PALSYN/synthesizers/: __init__.py  base.py  esn.py  gru.py  lnn.py  lstm.py  rnn.py  tcn.py  transformer.py
05_PALSYN/05_02_PALSYN/tests/: test_log_preprocessing.py  test_log_tokenization.py
05_PALSYN/05_02_PALSYN/tutorial/: palsyn_esn_tutorial.py  palsyn_gru_tutorial.py  palsyn_lnn_tutorial.py  palsyn_lstm_tutorial.py  palsyn_rnn_tutorial.py  palsyn_tcn_tutorial.py  palsyn_transformer_tutorial.py
MIMICEL_data/: MIMICEL feature table.xlsx  mimicel_split_metadata.csv  mimicel_split_summary.txt
(+4 files in other folders)
